# project_merody

./: .gitignore  CLAUDE.md  README.md  melody_transcription_project_plan.md  pyproject.toml
src/melody_transcriber/: config.py  logger.py  main.py
src/melody_transcriber/audio/: loader.py  preprocess.py
src/melody_transcriber/midi/: writer.py
src/melody_transcriber/models/: __init__.py  frame_pitch.py  note_event.py
src/melody_transcriber/notes/: quantizer.py  segmenter.py
src/melody_transcriber/pipeline/: transcribe.py
src/melody_transcriber/pitch/: estimator.py  smoothing.py
src/melody_transcriber/visualization/: plotter.py
tests/: test_estimator.py  test_loader.py  test_segmenter.py  test_writer.py
