[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melody-transcriber"
version = "0.1.0"
description = "Single-voice melody to MIDI transcription tool"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10",
    "pretty_midi>=0.2.10",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
melody-transcriber = "melody_transcriber.main:main"
